--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.Test"
         tools:targetApi="31">
         <activity
+            android:name=".weather_rec_day"
+            android:exported="false" />
+        <activity
+            android:name=".weather_rec_week"
+            android:exported="false" />
+        <activity
             android:name=".board_new"
             android:exported="false" />
         <activity
