--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.Test"
         tools:targetApi="31">
         <activity
+            android:name=".Crud_page"
+            android:exported="false" />
+        <activity
             android:name=".Intro_page"
             android:exported="false" />
         <activity
